--- a/static/assets/tpls/register.tpl.html
+++ b/static/assets/tpls/register.tpl.html
@@ -4,5 +4,7 @@
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <label for="inputRePassword" class="sr-only">Retype Password</label>
+    <input type="password" id="inputRePassword" class="form-control" placeholder="Retype password" required>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
