Starting webpage to view/manage keys

--- a/public/assets/tpls/login.tpl.html
+++ b/public/assets/tpls/login.tpl.html
@@ -1,8 +1,10 @@
 <form class="form-signin">
     <h2 class="form-signin-heading">Please sign in</h2>
     <label for="inputUsername" class="sr-only">Username</label>
-    <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+    <input type="text" ng-model="user.username" id="inputUsername" class="form-control" placeholder="Username" required
+           autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <input type="password" ng-model="user.password" id="inputPassword" class="form-control" placeholder="Password"
+           required>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="login()">Sign in</button>
 </form>
