--- a/public/assets/tpls/keylist.tpl.html
+++ b/public/assets/tpls/keylist.tpl.html
@@ -1,8 +1,8 @@
 <div class="input-group">
     <input type="text" class="form-control" placeholder="Search..." ng-model="searchBy">
     <span class="input-group-btn">
-        <button class="btn btn-secondary" type="button"><i class="fa fa-plus"></i> key</button>
-      </span>
+        <button ng-click="addKey()" class="btn btn-secondary" type="button"><i class="fa fa-plus"></i> key</button>
+    </span>
 </div>
 <table class="table table-striped">
     <thead>
