--- a/public/assets/tpls/login.tpl.html
+++ b/public/assets/tpls/login.tpl.html
@@ -7,4 +7,6 @@
     <input type="password" ng-model="user.password" id="inputPassword" class="form-control" placeholder="Password"
            required>
     <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="login()">Sign in</button>
+    <p ng-if="error" class="text-danger text-center">{{error}}</p>
+    <p class="text-danger text-center"><a ng-href="#/register">Register an account</a></p>
 </form>
