--- a/public/assets/tpls/register.tpl.html
+++ b/public/assets/tpls/register.tpl.html
@@ -1,10 +1,16 @@
 <form class="form-signin">
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+    <h2 class="form-signin-heading">Registration</h2>
+    <label for="inputUser" class="sr-only">Email address</label>
+    <input type="text" ng-model="user.username" id="inputUser" class="form-control" placeholder="Username" required
+           autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <input type="password" ng-model="user.password" id="inputPassword" class="form-control" placeholder="Password"
+           required>
     <label for="inputRePassword" class="sr-only">Retype Password</label>
-    <input type="password" id="inputRePassword" class="form-control" placeholder="Retype password" required>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <input type="password" ng-model="retype" ng-init="hola" id="inputRePassword" class="form-control" placeholder="Retype password"
+           required>
+    <button ng-disabled="retype != '' && user.password != retype" ng-click="register()"
+            class="btn btn-lg btn-primary btn-block" type="submit">Register
+    </button>
+    <p ng-if="error" class="text-danger text-center">{{error}}</p>
 </form>
